force-app/main/default/objects/Product_Donation__c/Product_Donation__c.object-meta.xml
<CustomObject>
    <description>Donation distribution to a member, recording specific to product, quantity, and date. Associate the donation to a special event, if appropriate.</description>
    <label>Product Donation</label>
    <nameField>
        <displayFormat>PD-{0000}</displayFormat>
        <label>PD Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Donations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>