force-app/main/default/objects/Product_Donation__c/fields/Amount_Billed__c.field-meta.xml
<CustomField>
    <fullName>Amount_Billed__c</fullName>
    <label>Amount Billed</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>