force-app/main/default/objects/Product_Donation__c/fields/Donor_Note__c.field-meta.xml
<CustomField>
    <fullName>Donor_Note__c</fullName>
    <label>Donor Note</label>
    <length>155</length>
    <type>Text</type>
</CustomField>