force-app/main/default/objects/Product_Donation__c/fields/Offered_Fee__c.field-meta.xml
<CustomField>
    <fullName>Offered_Fee__c</fullName>
    <label>Offered Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>