force-app/main/default/objects/Product_Donation__c/fields/Offered_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Offered_Quantity__c</fullName>
    <label>Offered Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>