force-app/main/default/objects/Product_Donation__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diapers</fullName>
            </value>
            <value>
                <fullName>Pads &amp; Liners</fullName>
            </value>
            <value>
                <fullName>Wipes</fullName>
            </value>
            <value>
                <fullName>Books</fullName>
            </value>
            <value>
                <fullName>Adult Briefs</fullName>
            </value>
            <value>
                <fullName>Adult Inc Pads</fullName>
            </value>
            <value>
                <fullName>Hand Sanitizer</fullName>
            </value>
            <value>
                <fullName>Period_underwear</fullName>
                <label>Period underwear</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>