force-app/main/default/objects/Product_Donation__c/fields/Restricted_Released__c.field-meta.xml
<CustomField>
    <fullName>Restricted_Released__c</fullName>
    <label>Restricted Released</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>