force-app/main/default/objects/Product_Donation__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>If RESERVED, use Donor Note field for future plan or commitment. RECEIVED indicates acknowledgement by recipient and may require a change to Delivery Date and Quanity Field. If CANCELLED because member declined the offer, put the word Declined in the Donor Note field.</description>
    <inlineHelpText>If RESERVED, use Donor Note field for future plan or commitment. RECEIVED indicates acknowledgement by recipient and may require a change to Delivery Date and Quanity Field. If CANCELLED because member declined the offer, put the word Declined in the Donor Note field.</inlineHelpText>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reserved</fullName>
            </value>
            <value>
                <fullName>Offered</fullName>
                <default>true</default>
                <label>Offered</label>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>