force-app/main/default/objects/Product_Donation__c/listViews/All_2020.listView-meta.xml
<ListView>
    <fullName>All_2020</fullName>
    <columns>NAME</columns>
    <columns>Member_ID__c</columns>
    <columns>Account__c</columns>
    <columns>Delivery_Date__c</columns>
    <columns>Quantity__c</columns>
    <columns>Product_Type__c</columns>
    <columns>In_kind_value_formula__c</columns>
    <columns>Amount_Billed__c</columns>
    <columns>Invoice__c</columns>
    <columns>Donor_Note__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Delivery_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2020</value>
    </filters>
    <filters>
        <field>Delivery_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2020</value>
    </filters>
    <label>All 2020</label>
</ListView>