force-app/main/default/objects/Product_Donation__c/listViews/All_2023.listView-meta.xml
<ListView>
    <fullName>All_2023</fullName>
    <columns>Member_ID__c</columns>
    <columns>Account__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Stage__c</columns>
    <columns>Offered_Quantity__c</columns>
    <columns>Offered_Fee__c</columns>
    <columns>Delivery_Date__c</columns>
    <columns>Quantity__c</columns>
    <columns>Amount_Billed__c</columns>
    <columns>Invoice__c</columns>
    <columns>Donor_Note__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Delivery_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2023</value>
    </filters>
    <filters>
        <field>Delivery_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2023</value>
    </filters>
    <label>1 All 2023</label>
</ListView>