force-app/main/default/objects/Product_Donation__c/listViews/All_Adult_Incontinence_Supplies.listView-meta.xml
<ListView>
    <fullName>All_Adult_Incontinence_Supplies</fullName>
    <columns>NAME</columns>
    <columns>Member_ID__c</columns>
    <columns>Account__c</columns>
    <columns>Delivery_Date__c</columns>
    <columns>Quantity__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Amount_Billed__c</columns>
    <columns>Invoice__c</columns>
    <columns>Donor_Note__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Type__c</field>
        <operation>contains</operation>
        <value>Adult Briefs,Adult Inc Pads</value>
    </filters>
    <label>All Adult Incontinence Supplies</label>
</ListView>