force-app/main/default/objects/Product_Donation__c/listViews/All_Diaper_Donations.listView-meta.xml
<ListView>
    <fullName>All_Diaper_Donations</fullName>
    <columns>NAME</columns>
    <columns>Member_ID__c</columns>
    <columns>Account__c</columns>
    <columns>Delivery_Date__c</columns>
    <columns>Quantity__c</columns>
    <columns>Product_Type__c</columns>
    <columns>In_kind_value_formula__c</columns>
    <columns>Amount_Billed__c</columns>
    <columns>Invoice__c</columns>
    <columns>Donor_Note__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Type__c</field>
        <operation>equals</operation>
        <value>Diapers</value>
    </filters>
    <label>All Diaper Donations</label>
</ListView>