force-app/main/default/objects/Product_Donation__c/listViews/All_Period_Supplies.listView-meta.xml
<ListView>
    <fullName>All_Period_Supplies</fullName>
    <columns>NAME</columns>
    <columns>Member_ID__c</columns>
    <columns>Account__c</columns>
    <columns>Delivery_Date__c</columns>
    <columns>Quantity__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Stage__c</columns>
    <columns>Donor_Note__c</columns>
    <columns>In_kind_value_formula__c</columns>
    <columns>Amount_Billed__c</columns>
    <columns>Invoice__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Type__c</field>
        <operation>equals</operation>
        <value>Pads &amp; Liners</value>
    </filters>
    <filters>
        <field>Stage__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </filters>
    <label>All Period Supplies</label>
</ListView>