force-app/main/default/objects/Product_Donation__c/listViews/APS_U_by_Kotex_Donations_2023.listView-meta.xml
<ListView>
    <fullName>APS_U_by_Kotex_Donations_2023</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Member_ID__c</columns>
    <columns>Account__c</columns>
    <columns>Offered_Quantity__c</columns>
    <columns>Offered_Fee__c</columns>
    <columns>Delivery_Date__c</columns>
    <columns>Stage__c</columns>
    <columns>Quantity__c</columns>
    <columns>Amount_Billed__c</columns>
    <columns>Invoice__c</columns>
    <columns>In_kind_value_formula__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Donor_Note__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Type__c</field>
        <operation>contains</operation>
        <value>Pads &amp; Liners</value>
    </filters>
    <filters>
        <field>Delivery_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>THIS_YEAR</value>
    </filters>
    <label>APS U by Kotex Donations 2023</label>
</ListView>