force-app/main/default/objects/Product_Donation__c/listViews/Ready_to_Invoice.listView-meta.xml
<ListView>
    <fullName>Ready_to_Invoice</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
    <columns>Member_ID__c</columns>
    <columns>Account__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Stage__c</columns>
    <columns>Offered_Quantity__c</columns>
    <columns>Offered_Fee__c</columns>
    <columns>Delivery_Date__c</columns>
    <columns>Quantity__c</columns>
    <columns>Amount_Billed__c</columns>
    <columns>Invoice__c</columns>
    <columns>Donor_Note__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Delivery_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2023</value>
    </filters>
    <filters>
        <field>Delivery_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2023</value>
    </filters>
    <filters>
        <field>Invoice__c</field>
        <operation>lessThan</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Received</value>
    </filters>
    <filters>
        <field>Offered_Fee__c</field>
        <operation>greaterOrEqual</operation>
        <value>1</value>
    </filters>
    <label>4 Ready to Invoice</label>
</ListView>