force-app/main/default/objects/Product_Donation__c/listViews/U_by_Kotex_Period_Supplies.listView-meta.xml
<ListView>
    <fullName>U_by_Kotex_Period_Supplies</fullName>
    <booleanFilter>1 AND (2 OR 3) and 4</booleanFilter>
    <columns>NAME</columns>
    <columns>Member_ID__c</columns>
    <columns>Account__c</columns>
    <columns>Delivery_Date__c</columns>
    <columns>Quantity__c</columns>
    <columns>Product_Type__c</columns>
    <columns>In_kind_value_formula__c</columns>
    <columns>Amount_Billed__c</columns>
    <columns>Invoice__c</columns>
    <columns>Donor_Note__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Type__c</field>
        <operation>equals</operation>
        <value>Pads &amp; Liners</value>
    </filters>
    <filters>
        <field>Donor_Note__c</field>
        <operation>contains</operation>
        <value>UbK</value>
    </filters>
    <filters>
        <field>Donor_Note__c</field>
        <operation>contains</operation>
        <value>kotex</value>
    </filters>
    <filters>
        <field>Delivery_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2023</value>
    </filters>
    <label>U by Kotex Period Supplies</label>
</ListView>